@@ -1,6 +1,7 @@
 2.2.2
 -----
 o Fixes problem when using named paths and aggregation
+o Fixes #4462 - RULE planner inconsistent in order of path elements
 
 2.2.1
 -----
